// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`landing no name param 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>Page Title</title>
    <link rel=\\"shortcut icon\\" type=\\"image/x-icon\\" href=\\"favicon.ico\\"/>
  </head>
  <body>
    <h1>My First Heading</h1>
    <p>My first paragraph.</p>
    Templatized body contents
  </body>
</html>"
`;

exports[`landing with name param 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <title>Page Title</title>
    <link rel=\\"shortcut icon\\" type=\\"image/x-icon\\" href=\\"favicon.ico\\"/>
  </head>
  <body>
    <h1>My First Heading, John!</h1>
    <p>My first paragraph.</p>
    Templatized body contents
  </body>
</html>"
`;
